# kaledis

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  USAGE.md
.github/workflows/: release.yaml
dal_custom/: .gitignore  Cargo.toml  README.md  dal.toml  main.luau
dal_custom/src/: main.rs
dal_custom/src/cli/: clean.rs  fetch.rs  init.rs  mod.rs  transpile.rs
dal_custom/src/lib/: injector.rs  manifest.rs  mod.rs  polyfill.rs  transpiler.rs  utils.rs
dal_custom/src/lib/modifiers/: convert_bit32.rs  mod.rs  optimize_table_initializers.rs  relative_path.rs  remove_generalized_iteration.rs  remove_number_literals.rs
dalbit/: Cargo.toml  README.md
dalbit/src/: main.rs
dalbit/src/lib/: injector.rs  manifest.rs  mod.rs  polyfill.rs  transpile.rs  utils.rs
dalbit/src/lib/modifiers/: get_io.rs  love_resolution.rs  mod.rs  optimize_table_initializers.rs  remove_generalized_iteration.rs  remove_redeclared_keys.rs
examples/boids_test/: .luaurc  kaledis.toml  pesde.toml
examples/boids_test/src/: main.luau
examples/custom_globals/: globals.d.luau  kaledis.schema.json  kaledis.toml  pesde.toml
examples/custom_globals/src/: main.luau
examples/custom_polyfill_git/: kaledis.toml  pesde.toml
examples/custom_polyfill_git/src/: main.luau
examples/custom_polyfill_local/: .gitignore  README.md  globals.d.luau  kaledis.schema.json  kaledis.toml  pesde.toml  readme.md
examples/custom_polyfill_local/src/: main.luau
examples/game_example/: .luaurc  kaledis.toml
examples/game_example/src/: main.luau
examples/hot_module_replacement/: kaledis.toml
examples/hot_module_replacement/src/: main.lua  main.luau  text.lua  text.luau
examples/new_configs/: conf.toml  kaledis.schema.json  kaledis.toml  love.schema.json  pesde.toml
examples/new_configs/src/: config.luau  main.luau
examples/new_globals/: kaledis.toml  pesde.toml  rokit.toml
examples/new_globals/luau_packages/: byteparse.luau
examples/new_globals/luau_packages/.pesde/plainenglish+byteparse/1.2.1/byteparse/: pesde.toml
examples/new_globals/src/: main.luau
examples/project/: kaledis.toml
examples/project/src/: main.luau  text.txt
examples/project_4/: globals.d.luau  kaledis.schema.json  kaledis.toml  pesde.toml
examples/socket_and_enet_injection/: globals.d.luau
examples/socket_and_enet_injection/src/: main.luau
examples/with_pesde/: .gitignore  .luaurc  kaledis.toml
examples/with_pesde/src/: main.luau
examples/with_pesde/src/libs/: a.luau  b.luau  init.luau
examples/with_rokit/: .gitignore  kaledis.toml  rokit.toml
examples/with_self/: conf.toml  kaledis.toml  pesde.toml
examples/with_self/src/: main.luau
examples/with_self/src/a_package/: a.luau  c.luau  init.luau
new_examples/boids_test/: conf.toml  kaledis.toml
new_examples/boids_test/src/: main.luau
new_examples/custom_globals/: globals.d.luau
new_examples/custom_polyfill_git/: conf.toml  kaledis.toml
new_examples/custom_polyfill_git/.zed/: settings.json
new_examples/custom_polyfill_git/src/: main.luau
new_examples/custom_polyfill_local/: .gitignore  kaledis.toml
new_examples/custom_polyfill_local/.zed/: settings.json
new_examples/custom_polyfill_local/src/: main.luau
new_examples/love2d12/: conf.toml  kaledis.toml
new_examples/love2d12/src/: main.luau
new_examples/new_assets/: conf.toml  kaledis.toml  pesde.toml
new_examples/new_assets/assets/bundle/: readme.txt
new_examples/new_assets/src/: main.luau
new_examples/socket_and_enet_injection/: kaledis.toml
new_examples/socket_and_enet_injection/src/: main.luau
new_examples/with_pesde/: kaledis.toml
new_examples/with_self/: kaledis.toml
new_examples/with_self/src/: main.luau
new_examples/with_self/src/a_package/: c.luau
old/: watch.rs
project/: globals.d.luau  kaledis.toml  main.luau
project/modules/: test.luau
project/modules/teste/: a.luau
src/: android.rs  cli_utils.rs  home_manager.rs  indicatif_log_bridge.rs  live_var_lsp.rs  main.rs  toml_conf.rs  utils.rs  zip_utils.rs
src/commands/: android.rs  build.rs  build_utils.rs  init.rs  mod.rs  update.rs  update_polyfill.rs  watch.rs
src/dalbit/: LICENSE  manifest.rs  mod.rs  polyfill.rs  transpile.rs  utils.rs
src/dalbit/modifiers/: ast_util.rs  convert_bit32.rs  get_love_modules.rs  love_resolution.rs  mod.rs  optimize_table_initializers.rs  remove_generalized_iteration.rs  remove_number_literals.rs  remove_redeclared_keys.rs  report_variables.rs  runtime_identifier.rs
src/editpe/: README.md  errors.rs  image.rs  mod.rs  resource.rs  types.rs  util.rs
static/: assets_injection.lua  globals.d.luau  globals_love_12.d.luau  kaleck.lua  kaledis.schema.json  lick.lua  pesde.toml  vscode_settings.json  vscode_settings_local.json
